@@ -33,8 +33,6 @@ import hudson.util.EditDistance;
 import hudson.util.VersionNumber;
 import java.io.File;
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.StandardCopyOption;
@@ -106,7 +104,7 @@ public class InstallPluginCommand extends CLICommand {
 
             // is this an URL?
             try {
-                URL u = new URI(source).toURL();
+                URL u = new URL(source);
                 stdout.println(Messages.InstallPluginCommand_InstallingPluginFromUrl(u));
                 File f = getTmpFile();
                 FileUtils.copyURLToFile(u, f); // TODO JENKINS-58248 proxy
@@ -115,7 +113,7 @@ public class InstallPluginCommand extends CLICommand {
                     pm.dynamicLoad(f);
                 }
                 continue;
-            } catch (MalformedURLException | URISyntaxException e) {
+            } catch (MalformedURLException e) {
                 // not an URL
             }
 
